# SimplestTradingBot

./: README.md
trading_bot/: Cargo.toml  request.sh
trading_bot/src/: main.rs
