[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.25"
hmac = "0.12.1"
hex = "0.4.3"
json = "0.12.4"
sha2 = "0.10.7"
rsa = { version = "0.9.2", features = ["sha2"] }
rand = "0.8.5"
base64 = "0.21.2"
